# dsba-itop2021-hw1

data/: test.csv
src/: CMakeLists.txt
src/files/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mymodel.cpp  mymodel.h  renderarea.cpp  renderarea.h
